spacing issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,6 +36,12 @@ button {
   font-family: roboto;
   font-weight: bolder;
   font-size: 1rem;
+     justify-content: center;
+     text-align: center;
+}
+
+#addToDoForm {
+  width: 90%;
 }
 
  main {
